[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/characters/lil_bro.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/Lil bro.png" type="Texture" id=2]
[ext_resource path="res://scenes/character_plane/character_plane.tscn" type="PackedScene" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.4
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "Idle Left"
length = 0.32
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterPlane:sprite_translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterPlane:sprite_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.32
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterPlane:sprite_translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterPlane:sprite_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk Left"
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterPlane:sprite_translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.04, 0.06, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.04, 0.06, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterPlane:sprite_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ), Vector3( 0, -180, 10 ), Vector3( 0, -180, 0 ), Vector3( 0, -180, -10 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.32
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterPlane:sprite_translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.04, 0.06, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.04, 0.06, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterPlane:sprite_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 10 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, -10 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Walk Left"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Walk Right"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id=22]
"states/Idle Left/node" = SubResource( 6 )
"states/Idle Left/position" = Vector2( 232, 83 )
"states/Idle Right/node" = SubResource( 7 )
"states/Idle Right/position" = Vector2( 468, 83 )
"states/Walk Left/node" = SubResource( 8 )
"states/Walk Left/position" = Vector2( 232, 197 )
"states/Walk Right/node" = SubResource( 9 )
"states/Walk Right/position" = Vector2( 468, 191 )
transitions = [ "Idle Left", "Walk Left", SubResource( 10 ), "Walk Left", "Idle Left", SubResource( 11 ), "Idle Left", "Idle Right", SubResource( 12 ), "Idle Right", "Idle Left", SubResource( 13 ), "Idle Right", "Walk Right", SubResource( 14 ), "Walk Right", "Idle Right", SubResource( 15 ), "Walk Right", "Walk Left", SubResource( 16 ), "Walk Left", "Walk Right", SubResource( 17 ), "Walk Right", "Idle Left", SubResource( 18 ), "Idle Left", "Walk Right", SubResource( 19 ), "Walk Left", "Idle Right", SubResource( 20 ), "Idle Right", "Walk Left", SubResource( 21 ) ]
graph_offset = Vector2( -57, 26 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="Lil Bro" type="Spatial"]
script = ExtResource( 1 )

[node name="CharacterPlane" parent="." instance=ExtResource( 3 )]
collision_layer = 1
collision_mask = 2
size = Vector2( 0.564545, 0.833 )
collision_side = 0
texture = ExtResource( 2 )

[node name="Area" type="Area" parent="CharacterPlane"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="CharacterPlane/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Idle Left" = SubResource( 2 )
"anims/Idle Right" = SubResource( 3 )
"anims/Walk Left" = SubResource( 4 )
"anims/Walk Right" = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 23 )
[connection signal="area_entered" from="CharacterPlane/Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="CharacterPlane/Area" to="." method="_on_Area_area_exited"]
